[gd_scene load_steps=3 format=3 uid="uid://dxhe5wpwrlagb"]

[ext_resource type="Script" uid="uid://bk1aylr4xcq5x" path="res://scene/ui/mode_panel_container.gd" id="1_gpnp0"]

[sub_resource type="LabelSettings" id="LabelSettings_bi1tj"]
font_size = 64
font_color = Color(0.99679, 9.62615e-08, 0.495365, 1)
outline_size = 8
outline_color = Color(0, 0, 0, 1)
shadow_size = 8
shadow_color = Color(0, 0, 0, 0.501961)
shadow_offset = Vector2(8, 4)

[node name="ModePanelContainer" type="PanelContainer"]
custom_minimum_size = Vector2(800, 600)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gpnp0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 48

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "选择游玩模式"
label_settings = SubResource("LabelSettings_bi1tj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 24

[node name="SiglePlayerButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "单人模式"

[node name="DoublePlayerButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "双人模式"

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "返回"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SiglePlayerButton" to="." method="_on_sigle_player_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/DoublePlayerButton" to="." method="_on_double_player_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
